--- a/scss/layouts/drupal/_drupal-login.scss
+++ b/scss/layouts/drupal/_drupal-login.scss
@@ -25,4 +25,12 @@
       }
     }
   }
+
+  @media (max-width:992px) {
+    .user-login-form {
+      .form-text {
+        max-width: 286px !important;
+      }
+    }
+  }
 }
